<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info"
            android:title="@string/info" />
        <item
            android:id="@+id/nav_attractions"
            android:icon="@drawable/ic_local_see"
            android:title="@string/attractions" />
        <item
            android:id="@+id/nav_nature"
            android:icon="@drawable/ic_nature"
            android:title="@string/nature" />
        <item
            android:id="@+id/nav_museums"
            android:icon="@drawable/ic_museum"
            android:title="@string/museums" />
        <item
            android:id="@+id/nav_restaurants"
            android:icon="@drawable/ic_restaurant"
            android:title="@string/restaurants" />
    </group>
</menu>